changed transition all to just opacity and transform to prevent font-size animating when jumping between full screen and smaller window.

--- a/src/components/Episode/styles.scss
+++ b/src/components/Episode/styles.scss
@@ -43,7 +43,7 @@
 			.episode,
 			.title,
 			.body>.paragraph {
-				transition: all 1s;
+				transition: opacity 1s, transform 1s;
 			}
 
 			.episode, 
