--- a/src/components/Episodes/styles.scss
+++ b/src/components/Episodes/styles.scss
@@ -14,8 +14,8 @@
 @media (min-width: 768px) {
 	.wrapper {
 		height: 100%;
-		background-image: url("assets/2d/shared/bg-medium.jpg");
-		background-attachment: none;
+		background: url("assets/2d/shared/bg-medium.jpg");
+
 	}
 }
 
